--- a/less/header.less
+++ b/less/header.less
@@ -119,6 +119,9 @@
       padding: 10px;
     }
   }
+  .navbar-collapse.in {
+    overflow-y: initial;
+  }
   height: 110px;
   background-color: #fff;
 }
